# drf-accelerator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup_env.py
.github/workflows/: ci.yml
bench_project/: benchmark.py  manage.py
bench_project/bench_app/: apps.py  models.py  serializers.py
bench_project/bench_app/migrations/: 0001_initial.py
bench_project/bench_project/: asgi.py  settings.py  urls.py  wsgi.py
drf_accelerator/: Cargo.toml  pyproject.toml
drf_accelerator/src/: formatters.rs  lib.rs  serializer.rs
drf_accelerator/tests/: test_datetime.py  test_extra_types.py  test_serializer.py
examples/: bench.py
examples/api_test/: models.py  serializers.py  views.py
examples/api_test/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_product_uuid_alter_product_price.py
examples/examples/: asgi.py  settings.py  urls.py  wsgi.py
